Bug 103619 - Konsole no longer saves schema setting
Summary: Konsole no longer saves schema setting
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-04-10 19:55 UTC by Ismail Donmez
Modified: 2007-09-29 18:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ismail Donmez 2005-04-10 19:55:52 UTC
Version:           1.5 (using KDE 3.4.89 (CVS >= 20050314), compiled sources)
Compiler:          gcc version 3.4.4 20050209 (prerelease) (Debian 3.4.3-9ubuntu3)
OS:                Linux (i686) release 2.6.12-rc2

Set a new schema with Settings->Schema->Transparent Konsole . Save settings with Settings->Save as Default. Restart konsole and old schema is there still. Looks like its borked on cvs as it was working fine before.
Comment 1 Kurt Hindenburg 2005-04-10 21:32:24 UTC
Save as Default does not save the default schema (and never did as far as I know).  Use Settings->Configure Konsole->Schema, pick a schema in the list and check on the box below the listbox 'Save as default schema'
Comment 2 Ismail Donmez 2005-04-10 21:36:17 UTC
Nope it used to work just fine before.
Comment 3 Kurt Hindenburg 2005-04-11 05:04:46 UTC
CVS commit by hindenburg: 

Fix saving of schema

BUG: 103619


  M +1 -0      konsole.cpp   1.533


--- kdebase/konsole/konsole/konsole.cpp  #1.532:1.533
@@ -1429,4 +1429,5 @@ void Konsole::saveProperties(KConfig* co
   config->writeEntry("Fullscreen",b_fullscreen);
   config->writeEntry("defaultfont", (se->widget())->getVTFont());
+  s_kconfigSchema = colors->find( se->schemaNo() )->relPath();
   config->writeEntry("schema",s_kconfigSchema);
   config->writeEntry("scrollbar",n_scroll);
Comment 4 Thomas Anderson 2007-09-29 18:53:53 UTC
I am still having this problem on 3.5.7. Konsole version 1.6.6

Any idea why it isn't working anymore?

Konsole was working in kde 3.5.5.