Fix saving of schema

BUG: 103619

svn path=/trunk/kdebase/konsole/; revision=404710